src/test/deca/syntax/parser/valid/if_several_operations.deca
// Parser test, several operations in the "if"

{
    if (x < y != 5) {
        print(x);
    }
}