src/test/deca/syntax/parser/invalid/inst_expr_print_bracket_not_opened.deca
// Parser test, parenthese not opened

{
    int x = 5;
    print x);
}